# acs_additional_cuda

./: CMakeLists.txt  README.md  cuda.cu  cuda_functions.h  func1.cfg  func2.cfg  func3.cfg  integr.cpp  integrate.cu
